Figured out spacing issue - divs were spreading out to meet the vertical space of the container.  align-content: flex-start fixed this.  Also could have changed height.

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ body{
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: center;
+	align-content: flex-start;
 }
 
 .footerSection .content {
@@ -78,7 +79,7 @@ body{
 	width: 25rem;
 	height: 20rem;
 	margin: 1.5rem;
-	margin-bottom: 0;
+	padding-bottom: 1.5em;
 }
 
 .projectText {
